# src/go-server-server-generated/go/api_artical.go
@@ -1,10 +1,9 @@
 /*
- * GoWeb
+ * Swagger Petstore
  *
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * API version: 1.0.0
- * Contact: xxx@mail2.sysu.edu.cn
+ * API version: 0.0.2
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
@@ -13,17 +12,12 @@ import (
 	"net/http"
 )
 
-func GetPost(w http.ResponseWriter, r *http.Request) {
+func GetArtical(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
 
-func SendPost(w http.ResponseWriter, r *http.Request) {
-	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
-	w.WriteHeader(http.StatusOK)
-}
-
-func UpdatePost(w http.ResponseWriter, r *http.Request) {
+func SendArtical(w http.ResponseWriter, r *http.Request) {
 	w.Header().Set("Content-Type", "application/json; charset=UTF-8")
 	w.WriteHeader(http.StatusOK)
 }
