# src/go-server-server-generated/go/model_api_response.go
@@ -1,19 +1,0 @@
-/*
- * GoWeb
- *
- * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
- *
- * API version: 1.0.0
- * Contact: xxx@mail2.sysu.edu.cn
- * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
- */
-package swagger
-
-type ApiResponse struct {
-
-	Code int32 `json:"code,omitempty"`
-
-	Type_ string `json:"type,omitempty"`
-
-	Message string `json:"message,omitempty"`
-}
