# src/go-server-server-generated/go/model_user.go
@@ -1,29 +1,16 @@
 /*
- * GoWeb
+ * Swagger Petstore
  *
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * API version: 1.0.0
- * Contact: xxx@mail2.sysu.edu.cn
+ * API version: 0.0.2
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
 
 type User struct {
 
-	Id int64 `json:"id,omitempty"`
-
-	Username string `json:"username,omitempty"`
-
-	FirstName string `json:"firstName,omitempty"`
-
-	LastName string `json:"lastName,omitempty"`
-
-	Email string `json:"email,omitempty"`
+	ID string `json:"ID,omitempty"`
 
 	Password string `json:"password,omitempty"`
-
-	Phone string `json:"phone,omitempty"`
-	// User Status
-	UserStatus int32 `json:"userStatus,omitempty"`
 }
