# src/go-server-server-generated/go/routers.go
@@ -1,10 +1,9 @@
 /*
- * GoWeb
+ * Swagger Petstore
  *
  * No description provided (generated by Swagger Codegen https://github.com/swagger-api/swagger-codegen)
  *
- * API version: 1.0.0
- * Contact: xxx@mail2.sysu.edu.cn
+ * API version: 0.0.2
  * Generated by: Swagger Codegen (https://github.com/swagger-api/swagger-codegen.git)
  */
 package swagger
@@ -56,65 +55,37 @@ var routes = Routes{
 	},
 
 	Route{
-		"GetPost",
+		"GetArtical",
 		strings.ToUpper("Get"),
-		"/post",
-		GetPost,
+		"/atricle",
+		GetArtical,
 	},
 
 	Route{
-		"SendPost",
+		"SendArtical",
 		strings.ToUpper("Post"),
-		"/post",
-		SendPost,
+		"/atricle",
+		SendArtical,
 	},
 
 	Route{
-		"UpdatePost",
-		strings.ToUpper("Put"),
-		"/post",
-		UpdatePost,
-	},
-
-	Route{
-		"CreateUser",
-		strings.ToUpper("Post"),
+		"GetUser",
+		strings.ToUpper("Get"),
 		"/user",
-		CreateUser,
+		GetUser,
 	},
 
 	Route{
-		"DeleteUser",
-		strings.ToUpper("Delete"),
-		"/user/{username}",
-		DeleteUser,
+		"UserLogin",
+		strings.ToUpper("Post"),
+		"/user/Login",
+		UserLogin,
 	},
 
 	Route{
-		"GetUserByName",
+		"UserLogout",
 		strings.ToUpper("Get"),
-		"/user/{username}",
-		GetUserByName,
-	},
-
-	Route{
-		"LoginUser",
-		strings.ToUpper("Get"),
-		"/user/login",
-		LoginUser,
-	},
-
-	Route{
-		"LogoutUser",
-		strings.ToUpper("Get"),
-		"/user/logout",
-		LogoutUser,
-	},
-
-	Route{
-		"UpdateUser",
-		strings.ToUpper("Put"),
-		"/user/{username}",
-		UpdateUser,
+		"/user/Logout",
+		UserLogout,
 	},
 }
